name:                  mismi-autoscaling
version:               0.0.1
license:               Apache-2.0
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-autoscaling.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , mismi-core
                     , mismi-autoscaling-core
                     , mismi-ec2
                     , mismi-ec2-core
                     , mismi-iam-core
                     , ambiata-x-eithert
                     , amazonka-autoscaling            >= 1.3.6      && < 1.6
                     , conduit                         == 1.2.*
                     , exceptions                      >= 0.6        && < 0.9
                     , lens                            >= 4.8        && < 4.16
                     , http-types                      == 0.8.*
                     , retry                           == 0.7.*
                     , text                            == 1.2.*


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Mismi.Autoscaling
                       Mismi.Autoscaling.Amazonka
                       Mismi.Autoscaling.Commands
                       Mismi.Autoscaling.Data
                       Mismi.Autoscaling.Error

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-core
                     , mismi-autoscaling
                     , ambiata-p
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*

test-suite test-io
  type:                exitcode-stdio-1.0
  main-is:             test-io.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , mismi-core
                     , mismi-core-test
                     , mismi-autoscaling
                     , mismi-autoscaling-core
                     , mismi-autoscaling-core-test
                     , mismi-ec2-core
                     , mismi-iam-core
                     , ambiata-p
                     , ambiata-twine
                     , ambiata-x-eithert
                     , retry                           == 0.7.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3.1      && < 0.6
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
