version: 0.0.3

name:
  mismi-ec2
author:
  Nick Hibberd
maintainer:
  Nick Hibberd <nhibberd@gmail.com>
homepage:
  https://github.com/nhibberd/mismi
bug-reports:
  https://github.com/nhibberd/mismi/issues
synopsis:
  AWS Library
description:
  mismi-ec2 is a library that provides a set of common and useful
  operations on top of AWS EC2
category:
  AWS
license:
  BSD3
license-file:
  LICENSE
cabal-version:
  >= 1.8
build-type:
  Simple
tested-with:
    GHC == 8.2.2
  , GHC == 8.4.3
  , GHC == 8.6.3
extra-source-files:
  CHANGELOG.md

library
  build-depends:
      base                            >= 3          && < 5
    , mismi-core                      == 0.0.3.*
    , mismi-ec2-core                  == 0.0.3.*
    , mismi-p                         == 0.0.3.*
    , amazonka                        >= 1.5        && < 1.7
    , amazonka-core                   >= 1.5        && < 1.7
    , amazonka-ec2                    >= 1.5        && < 1.7
    , bytestring                      >= 0.10       && < 0.11
    , exceptions                      >= 0.7        && < 0.11
    , http-conduit
    , lens                            >= 4.8        && < 4.18
    , text                            == 1.2.*
    , transformers                    >= 0.3.1      && < 0.6
    , transformers-bifunctors         >= 0.1        && < 1


  ghc-options:
    -Wall

  hs-source-dirs:
    src


  exposed-modules:
    Mismi.EC2
    Mismi.EC2.Amazonka
    Mismi.EC2.Commands
    Mismi.EC2.Data
    Mismi.EC2.Metadata

test-suite test
  type:
    exitcode-stdio-1.0

  main-is:
    test.hs

  ghc-options:
    -Wall -threaded -O2

  hs-source-dirs:
    test

  other-modules:
    Test.Mismi.EC2.Data

  build-depends:
      base
    , hedgehog
    , mismi-core                      == 0.0.3.*
    , mismi-core-test                 == 0.0.3.*
    , mismi-ec2                       == 0.0.3.*
    , mismi-ec2-core-test             == 0.0.3.*
    , mismi-p                         == 0.0.3.*

test-suite test-io
  type:
    exitcode-stdio-1.0

  main-is:
    test-io.hs

  ghc-options:
    -Wall -threaded -O2

  hs-source-dirs:
    test

  other-modules:
    Test.IO.Mismi.EC2.Commands


  build-depends:
      base
    , hedgehog
    , mismi-core                      == 0.0.3.*
    , mismi-core-test                 == 0.0.3.*
    , mismi-ec2                       == 0.0.3.*
    , mismi-p                         == 0.0.3.*
    , transformers                    >= 0.3.1      && < 0.6
