name:                  mismi-iam-core
version:               0.0.1
license:               Apache-2.0
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-iam-core.

library
  build-depends:
                       base                            >= 3          && < 5
                     , mismi-p
                     , text                            == 1.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Mismi.IAM.Core.Data
