name:                  mismi-p
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              A commmon prelude for the mismi project.
category:              Prelude
cabal-version:         >= 1.8
build-type:            Simple
description:           A commone prelude for the mismi project.

library
  build-depends:
                          base                        >= 4.6        && < 5
                        , text                        >= 1.1        && < 1.3


  ghc-options:          -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       P
