version: 0.0.3

name:
  mismi-secretsmanager
author:
  Nick Hibberd
maintainer:
  Nick Hibberd <nhibberd@gmail.com>
homepage:
  https://github.com/nhibberd/mismi
bug-reports:
  https://github.com/nhibberd/mismi/issues
synopsis:
  AWS Library
description:
  mismi-secretsmanager is a library that provides a set of common and useful
  operations on top of AWS SecretsManager.
category:
  AWS
license:
  BSD3
license-file:
  LICENSE
cabal-version:
  >= 1.8
build-type:
  Simple
tested-with:
    GHC == 8.2.2
  , GHC == 8.4.3
  , GHC == 8.6.3
extra-source-files:
  CHANGELOG.md


library
  build-depends:
      base                            >= 3          && < 5
    , mismi-core                      == 0.0.3.*
    , mismi-p                         == 0.0.3.*
    , amazonka                        >= 1.5        && < 1.7
    , amazonka-core                   >= 1.5        && < 1.7
    , amazonka-secretsmanager         >= 1.5        && < 1.7
    , lens                            >= 4.8        && < 4.18
    , http-types                      >= 0.8        && < 1
    , text                            == 1.2.*
    , transformers                    >= 0.3.1      && < 0.6
    , uuid                            == 1.3.*

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Mismi.SecretsManager.Commands
    Mismi.SecretsManager.Data


test-suite test-io
  type:
    exitcode-stdio-1.0

  main-is:
    test-io.hs

  ghc-options:
    -Wall -threaded -O2

  hs-source-dirs:
    test

  other-modules:
    Test.IO.Mismi.SecretsManager.Commands

  build-depends:
      base
    , mismi-core                      == 0.0.3.*
    , mismi-core-test                 == 0.0.3.*
    , mismi-secretsmanager
    , mismi-p                         == 0.0.3.*
    , hedgehog
    , lens                            >= 4.8        && < 4.18
    , text                            == 1.2.*
    , transformers                    >= 0.3.1      && < 0.6
    , uuid                            == 1.3.*
