version: 0.0.3

name:
  mismi-sqs
author:
  Nick Hibberd
maintainer:
  Nick Hibberd <nhibberd@gmail.com>
homepage:
  https://github.com/nhibberd/mismi
bug-reports:
  https://github.com/nhibberd/mismi/issues
synopsis:
  AWS Library
description:
  mismi-sqs is a library that provides a set of common and useful
  operations on top of AWS SQS.
category:
  AWS
license:
  BSD3
license-file:
  LICENSE
cabal-version:
  >= 1.8
build-type:
  Simple
tested-with:
    GHC == 8.2.2
  , GHC == 8.4.3
  , GHC == 8.6.3
extra-source-files:
  CHANGELOG.md

library
  build-depends:
      base                            >= 3          && < 5
    , mismi-core                      == 0.0.3.*
    , mismi-kernel                    == 0.0.3.*
    , mismi-p                         == 0.0.3.*
    , template-haskell
    , amazonka                        >= 1.5        && < 1.7
    , amazonka-core                   >= 1.5        && < 1.7
    , amazonka-sqs                    >= 1.5        && < 1.7
    , exceptions                      >= 0.7        && < 0.11
    , text                            == 1.2.*
    , transformers                    >= 0.3.1      && < 0.6
    , transformers-bifunctors         >= 0.1        && < 1
    , lens                            >= 4.8        && < 4.18
    , unordered-containers            >= 0.2.5      && < 0.3

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Mismi.SQS.Amazonka
    Mismi.SQS.Commands
    Mismi.SQS.Data
    Mismi.SQS.Error

test-suite test-io
  type:
    exitcode-stdio-1.0

  main-is:
    test-io.hs

  ghc-options:
    -Wall -threaded -O2

  hs-source-dirs:
    test

  other-modules:
    Test.Mismi.SQS.Gen
    Test.IO.Mismi.SQS.Commands
    Test.IO.Mismi.SQS.Util

  build-depends:
      base
    , mismi-kernel                    == 0.0.3.*
    , mismi-core                      == 0.0.3.*
    , mismi-core-test                 == 0.0.3.*
    , mismi-sqs
    , mismi-p                         == 0.0.3.*
    , mmorph                          >= 1.0        && < 1.2
    , exceptions                      >= 0.7        && < 0.11
    , hedgehog
    , lens                            >= 4.8        && < 4.18
    , mtl                             >= 2.1        && < 2.3
    , resourcet                       >= 1.1        && < 1.3
    , text                            == 1.2.*
    , time                            >= 1.4        && < 1.10
    , transformers                    >= 0.3.1      && < 0.6
