name:                  mismi-autoscaling-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , mismi-core
                     , mismi-core-test
                     , mismi-autoscaling
                     , mismi-autoscaling-core
                     , mismi-autoscaling-core-test
                     , mismi-ec2-core
                     , mismi-iam-core
                     , ambiata-p
                     , ambiata-twine
                     , ambiata-x-eithert
                     , retry                           == 0.7.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3.1      && < 0.6
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*

  exposed-modules:
                     Test.Mismi.Autoscaling.Control
