name:                  mismi-core-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base                            >= 3          && < 6
                     , amazonka                        >= 1.3.6      && < 1.6
                     , amazonka-core                   >= 1.3.6      && < 1.6
                     , mismi-core
                     , mismi-kernel
                     , mismi-kernel-test
                     , mismi-p
                     , mmorph
                     , exceptions                      >= 0.6        && < 0.9
                     , filepath                        >= 1.3        && < 1.5
                     , hedgehog
                     , http-client                     >= 0.4.18     && < 0.6
                     , resourcet                       == 1.1.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6
                     , unix                            == 2.7.*
                     , temporary                       == 1.2.*
                     , uuid                            == 1.3.*

  exposed-modules:
                       Test.Mismi.Gen
                       Test.Mismi
