version: 0.0.1

name:
  mismi-core-test

cabal-version:
  >= 1.8
build-type:
  Simple

library
  build-depends:
      base                            >= 3          && < 5
    , amazonka-core                   >= 1.5        && < 1.7
    , mismi-core
    , mismi-p
    , mmorph                          >= 1.0        && < 1.2
    , hedgehog
    , transformers                    >= 0.3        && < 0.6

  exposed-modules:
    Test.Mismi
    Test.Mismi.Gen
