name:                  mismi-kernel-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base                            >= 3          && < 6
                     , mismi-kernel
                     , mismi-p
                     , hedgehog
                     , text                            == 1.2.*

  exposed-modules:
                       Test.Mismi.Kernel.Gen
