version: 0.0.2

name:
  mismi-kernel-test

cabal-version:
  >= 1.8
build-type:
  Simple

library
  build-depends:
      base                            >= 3          && < 5
    , mismi-kernel                    == 0.0.2.*
    , mismi-p                         == 0.0.2.*
    , hedgehog
    , text                            >= 1.1        && < 1.3

  exposed-modules:
    Test.Mismi.Kernel.Gen
