version: 0.0.1

name:
  mismi-s3-core-test

cabal-version:
  >= 1.8
build-type:
  Simple

library
  build-depends:
      base                            >= 3          && < 5
    , mismi-s3-core
    , mismi-p
    , hedgehog
    , text                            >= 1.1        && < 1.3

  exposed-modules:
    Test.Mismi.S3.Core.Gen
