version: 0.0.1

name:
  mismi-s3-test

cabal-version:
  >= 1.8
build-type:
  Simple

library
  build-depends:
      base                            >= 3          && < 5
    , mismi-core
    , mismi-core-test
    , mismi-s3
    , mismi-p
    , hedgehog
    , directory                       >= 1.2        && < 1.4
    , exceptions                      >= 0.7        && < 0.11
    , filepath                        >= 1.3        && < 1.5
    , mtl                             >= 2.1        && < 2.3
    , resourcet                       >= 1.1        && < 1.3
    , text                            == 1.2.*
    , transformers                    >= 0.3.1      && < 0.6
    , unix                            == 2.7.*
    , uuid                            == 1.3.*


  exposed-modules:
    Test.Mismi.Amazonka
    Test.Mismi.S3
