name:                  mismi-sqs-core-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , mismi-kernel
                     , mismi-kernel-test
                     , mismi-sqs-core
                     , ambiata-p
                     , text
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*

  exposed-modules:
                       Test.Mismi.SQS.Core.Arbitrary
