version: 0.0.3

name:
  mismi-sqs-test

cabal-version:
  >= 1.8
build-type:
  Simple

library
  build-depends:
      base                            >= 3          && < 5
    , mismi-kernel                    == 0.0.3.*
    , mismi-sqs                       == 0.0.3.*
    , mismi-p                         == 0.0.3.*
    , hedgehog
    , text                            >= 1.1        && < 1.3

  exposed-modules:
    Test.Mismi.SQS.Gen
